# tauri-moondream

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml
ios/: Package.swift  README.md
ios/Sources/: CameraExtensions.swift  CameraPlugin.swift
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: base64img.rs  lib.rs  main.rs  moondream.rs  utils.rs
tauri-moondream/: Cargo.toml  tauri.conf.json
tauri-moondream/capabilities/: main.json
tauri-moondream/src/: lib.rs
tauri-plugin-image/: Cargo.toml  README.md  package.json
tauri-plugin-image/examples/tauri-app/: package.json
tauri-plugin-image/examples/tauri-app/src/: App.svelte
tauri-plugin-image/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-image/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-image/guest-js/: index.ts
tauri-plugin-image/ios/: Package.swift  README.md
tauri-plugin-image/ios/Sources/: ImagePlugin.swift
tauri-plugin-image/ios/Tests/PluginTests/: PluginTests.swift
tauri-plugin-image/src/: desktop.rs  lib.rs  mobile.rs
