[package]
name = "tauri-moondream"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_moondream_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle = { git="https://github.com/huggingface/candle/", package = "candle-core", features = ["metal"] }
candle-transformers = { git="https://github.com/huggingface/candle/", package = "candle-transformers"}
candle-nn = { git="https://github.com/huggingface/candle/", package = "candle-nn", features = ["metal"] }
tokenizers = "0.15.2"
hf-hub = "0.3.2"
anyhow = "1.0.81"
image = "0.25.1"
tauri-plugin-log = "2.0.0-beta.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
log = "0.4.21"
thiserror = "1.0.58"
tokio = { version = "1.32.0", features = ["macros"] }
tauri-plugin-dialog = "2.0.0-beta.5"
tauri-plugin-image = { path = "../tauri-plugin-image" } 
